--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest -u"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.22.3",
@@ -22,6 +22,7 @@
     "@react-navigation/stack": "^6.3.23",
     "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "4.36.1",
+    "@testing-library/react-native": "^12.4.3",
     "axios": "^1.4.0",
     "lottie-react-native": "^6.6.0",
     "react": "18.2.0",
@@ -35,7 +36,8 @@
     "react-native-sms": "^1.11.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.0.0",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "rn-android-keyboard-adjust": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -45,6 +47,7 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
+    "@types/mocha": "^10.0.6",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
