--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-community/geolocation": "^3.2.0",
     "@react-native-firebase/app": "^19.0.0",
     "@react-native-firebase/auth": "^19.0.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
@@ -22,20 +24,34 @@
     "@react-navigation/stack": "^6.3.23",
     "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "4.36.1",
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^4.17.0",
+    "@tensorflow/tfjs-react-native": "^1.0.0",
     "@testing-library/react-native": "^12.4.3",
     "axios": "^1.4.0",
     "lottie-react-native": "^6.6.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-actions-sheet": "^0.9.3",
     "react-native-contacts": "^7.0.8",
     "react-native-element-dropdown": "^2.10.1",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-maps": "^1.11.3",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-size-matters": "^0.4.2",
+    "react-native-slider": "^0.11.0",
     "react-native-sms": "^1.11.0",
+    "react-native-sound-player": "^0.13.2",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.0.0",
+    "react-native-video": "^5.2.1",
     "react-redux": "^9.1.0",
     "rn-android-keyboard-adjust": "^2.1.2"
   },
@@ -53,8 +69,10 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "nativewind": "^2.0.11",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   },
   "engines": {
